--- a/navbar.css
+++ b/navbar.css
@@ -43,6 +43,7 @@
 .navbar #buttontable{
     margin-left: auto; margin-right: auto;
     width: fit-content;
+    z-index: 151;
 }
 
 .navbar button {
